force-app/main/default/objects/Lease_Agreement__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>true</default><label>Draft</label></value><value><fullName>Active</fullName><default>false</default><label>Active</label></value><value><fullName>Expired</fullName><default>false</default><label>Expired</label></value><value><fullName>Terminated</fullName><default>false</default><label>Terminated</label></value></valueSetDefinition></valueSet></CustomField>