force-app/main/default/objects/Lease_Agreement__c/fields/Tenant__c.field-meta.xml
<CustomField><fullName>Tenant__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Tenant</label><referenceTo>Tenant__c</referenceTo><relationshipLabel>Lease Agreements</relationshipLabel><relationshipName>Lease_Agreements</relationshipName><required>true</required><type>Lookup</type></CustomField>