force-app/main/default/objects/Lease_Agreement__c/fields/Terms__c.field-meta.xml
<CustomField><fullName>Terms__c</fullName><label>Terms</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines></CustomField>